# django-lookbook

./: .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  package-lock.json  package.json  postcss.config.js  pyproject.toml  requirements-dev.txt  safelist.txt  tailwind.config.js  tox.ini
.github/workflows/: runtests.yml
docs/source/: conf.py  contributing.md  dark.md  getting_started.md  index.rst  install.md  install_with_viewcomponent.md  overview.md  params.md  preview.md  slot.md  write_preview.md
frontend/src/application/: app.js
frontend/src/controllers/: index.js  lookbook_clipboard_controller.js  lookbook_display_option_controller.js  lookbook_filter_input_controller.js  lookbook_highlight_controller.js  lookbook_iframe_refresh_controller.js  lookbook_open_preview_controller.js  lookbook_params_editor_controller.js  lookbook_preview_filter_controller.js  lookbook_sidebar_link_controller.js  lookbook_sidebar_toggle_controller.js  lookbook_split_layout_controller.js  markdown_controller.js
frontend/src/helpers/: highlightjs-line-numbers.js  index.js  lookbook_helper.js  utils.js
frontend/src/styles/: index.scss
frontend/src/styles/lookbook/: _base.scss  _header.scss  _lookbook.scss  _params.scss  _toolbar.scss
frontend/webpack/: webpack.common.js  webpack.config.prod.js
src/django_lookbook/: __init__.py  app_settings.py  apps.py  fields.py  preview.py  urls.py  utils.py  views.py
src/django_lookbook/static/lookbook/: manifest.json
tests/: conftest.py  test_preview.py
tests/previews/: simple_preview.py
tests/testapp/: urls.py
(+15 files in other folders)
