[tool.poetry]
name = "django-lookbook"
version = "1.0.2"
description = "UI development environment for Django"
authors = ["Michael Yin <michaelyin@accordbox.com>"]
license = "MIT"
homepage = "https://github.com/rails-inspire-django/django-lookbook"
readme = "README.md"
packages = [{ include = "django_lookbook", from = "src" }]

[tool.poetry.urls]
Changelog = "https://github.com/rails-inspire-django/django-lookbook/releases"

[tool.poetry.dependencies]
python = ">=3.8"
django = ">=3.2"
django-viewcomponent = ">=1.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["setuptools", "poetry_core>=1.0"]
build-backend = "poetry.core.masonry.api"
